<resources>
    <string name="dropbox_app_key">okvonvhdmwifmb3</string>
    <string name="dropbox_app_secrit_key">jfa11ud0i04kudf</string>
    <string name="dropbox_access_token">wYgX3T8lVvMAAAAAAAABUodl_OENtOxkuuLWierrzH__8_Nn4-KDhhxCn1X2dRfg</string>

    <string name="app_name">GearManager</string>
    <string name="toolSize">공구크기</string>
    <string name="teeth">잇수</string>
    <string name="torision">비틀림각</string>
    <string name="addTeeth">전위계수</string>
    <string name="sm">걸치기</string>
    <string name="caldetail_label">기어 상세정보</string>
    <string name="edit_label">기어계산</string>
    <string name="hint_company_name">업체명</string>
    <string name="hint_product_name">제품명</string>
    <string name="hint_count">수량</string>
    <string name="error_stock">입력이 누락된 부분이 있는지 확인해 주십시오</string>
    <string name="dialog_title_delete">삭제</string>
    <string name="dialog_message_delete">%s (을)를 삭제하시겠습니까?</string>
    <string name="dialog_button_delete">삭제</string>
    <string name="dialog_button_cancel">닫기</string>
    <string name="txt_pressAngle">압력각</string>
    <string name="txt_torisionAngle">비틀림각</string>
    <string name="activity_label_stock_detail">재고 상세보기</string>
    <string name="activity_label_stock_add">재고 추가</string>
    <string name="activity_label_stock_list">재고현황</string>
    <string name="empty_list_export">출고현황이 없습니다</string>
    <string name="activity_label_export_list">출고현황</string>

    <string-array name="pressAngle">
        <item>20</item>
        <item>14.5</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="format">
        <item>0.000</item>
        <item>0.0000</item>
        <item>0.00000</item>
        <item>0.000000</item>
        <item>0.0000000</item>
    </string-array>
</resources>
