<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.shinheung.gearmanager.MVP.StockAddContract.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="2"
            android:hint="@string/hint_company_name" />

        <AutoCompleteTextView
            android:id="@+id/editProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="2"
            android:hint="@string/hint_product_name" />

        <EditText
            android:id="@+id/editCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_count" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick='@{v -> handler.selectDate()}'
            android:text="날짜 선택" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="저장하기"
            android:onClick='@{v -> handler.create()}'/>
    </LinearLayout>
</layout>